--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 project(metal-cpp)
-set(CMAKE_BUILD_TYPE Debug) #
 
 set(METAL_SOURCES math.metal) # include the project's metal files here
 set(METAL_OUTPUT "default.metallib")
@@ -22,7 +21,7 @@ add_custom_command(
 
 add_custom_target(default_library ALL DEPENDS ${CMAKE_BINARY_DIR}/${METAL_OUTPUT})
 
-add_executable(metal-cpp main.cpp MetalAdder.cpp)
+add_executable(metal-cpp main.cpp)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/metal-cpp)
 target_link_libraries(metal-cpp
